--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ ul,
 ol {
   list-style: none;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 /* style */
 body {
@@ -21,10 +25,13 @@ body {
 }
 .globalHeader {
   margin: 20px;
+}
+.searchForm {
   display: flex;
   justify-content: space-between;
 }
-.globalHeader > input {
+
+.searchForm > input {
   width: 100%;
   margin-right: 10px;
   height: 40px;
@@ -32,7 +39,7 @@ body {
   border: 1px solid #ddd;
   border-radius: 4px;
 }
-.globalHeader > button {
+.searchForm > button {
   white-space: nowrap;
   padding: 0 28px;
   border: none;
